@@ -2,6 +2,7 @@
   = o.hidden_field :user_id
   = o.hidden_field :access
   = o.hidden_field :assigned_to
+  = o.hidden_field :campaign_id
   .subtitle Opportunity
   .section
     %small
