@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Wed, Nov 4, 2009
+---------------------------------------------------------------------
+- Correctly set opportunity campaign and converting a lead (LH #119).
+
 Sat, Oct 31, 2009
 ---------------------------------------------------------------------
 - Correctly show opportunity summary when opportunity stage hasn't been specified.
